concept inheritance
SVN-Revision: 2455